@@ -1,3 +1,9 @@
+2005-11-18  Jie Zhang  <jie.zhang@analog.com>
+
+	* config/bfin-defs.h (IS_BREG, IS_LREG): New macros.
+	* config/bfin-parse.y (asm_1): Check register type for load immediate
+	instruction.
+
 2005-11-17  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/tc-ppc.c (ppc_frob_file_before_adjust): Do not reference
